--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
 		"url": "git://github.com/garethflowers/eslint-config-ts.git"
 	},
 	"scripts": {
-		"build": "npm run lint",
+		"build": "",
 		"lint": "eslint .",
 		"postversion": "git push --follow-tags",
 		"preversion": "npm test",
 		"start": "npm test",
-		"test": ""
+		"test": "npm run lint"
 	},
 	"version": "0.0.0"
 }
