--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,10 @@ jobs:
     strategy:
       matrix:
         node-version:
-          - 16.x
           - 18.x
-          - 19.x
+          - 20.x
+          - 22.x
+          - latest
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
