--- a/.github/workflows/release-npmjs.yml
+++ b/.github/workflows/release-npmjs.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
-          registry-url: "https://registry.npmjs.org"
+          node-version: latest
+          registry-url: https://registry.npmjs.org
       - run: npm ci
       - run: npm publish --access=public
         env:
