--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         node-version:
           - 18.x
           - 20.x
-          - 22.x
+          - current
           - latest
     steps:
       - uses: actions/checkout@v4
