--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
 		"url": "https://github.com/garethflowers/eslint-config-ts/issues"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "7.18.0",
-		"@typescript-eslint/parser": "7.18.0",
-		"eslint": "8.57.1",
 		"eslint-plugin-import": "2.31.0",
-		"eslint-plugin-jsdoc": "50.6.14"
+		"eslint-plugin-jsdoc": "50.6.14",
+		"typescript-eslint": "8.31.0"
 	},
-	"description": "Opinionated strict [eslint](https://github.com/palantir/eslint) configuration for TypeScript and JavaScript projects.",
+	"description": "Opinionated strict eslint configuration for TypeScript and JavaScript projects.",
 	"devDependencies": {
 		"mocha": "11.2.2",
 		"typescript": "5.8.3"
@@ -45,6 +43,10 @@
 		"spec": "src/**/*.spec.js"
 	},
 	"name": "@garethflowers/eslint-config-ts",
+	"peerDependencies": {
+		"eslint": ">= 9",
+		"typescript": ">= 5.8"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git://github.com/garethflowers/eslint-config-ts.git"
@@ -55,7 +57,7 @@
 		"postversion": "git push --follow-tags",
 		"preversion": "npm test",
 		"start": "npm test",
-		"test": "npm run lint"
+		"test": "eslint --debug"
 	},
 	"version": "0.3.0"
 }
